- Se crean módulos mneg-infra-modelo, mneg-infra-seguridad, mneg-tlp-web. - Se configura seguridad para permitir zona pública y restringida. - Se añaden librerías de jquery, jquery-ui y requireJS. - Se crea página con ejemplos de características de la arquitectura.

--- a/mneg-tlp/pom.xml
+++ b/mneg-tlp/pom.xml
@@ -20,6 +20,7 @@
   	<module>mneg-tlp-modelo</module>
   	<module>mneg-tlp-datos</module>
   	<module>mneg-tlp-servicios</module>
+  	<module>mneg-tlp-web</module>
   </modules>  
   
  <repositories>	
