--- a/mneg-infra/mneg-infra-utils/pom.xml
+++ b/mneg-infra/mneg-infra-utils/pom.xml
@@ -12,9 +12,37 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>mneg-infra-utils</name>
   <dependencies>
+  	<dependency>
+		<groupId>com.mx.mneg.infra</groupId>
+		<artifactId>mneg-infra-modelo</artifactId>
+		<version>0.0.1-SNAPSHOT</version>  	
+  	</dependency>
 	<dependency>
 	    <groupId>org.springframework</groupId>
 	    <artifactId>org.springframework.context</artifactId>
 	</dependency>  
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>org.springframework.web</artifactId>
+	</dependency>	 
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>org.springframework.web.servlet</artifactId>
+	</dependency>		
+	<dependency>
+	    <groupId>org.springframework.security</groupId>
+	    <artifactId>org.springframework.security.core</artifactId>
+	</dependency>		
+	<dependency>
+		<groupId>org.codehaus.jackson</groupId>
+		<artifactId>jackson-mapper-asl</artifactId>
+		<version>1.9.7</version>
+	</dependency>	
+	<dependency>
+	    <groupId>javax.servlet</groupId>
+	    <artifactId>servlet-api</artifactId>
+	    <version>2.5</version>
+	    <scope>provided</scope>
+	</dependency>	
   </dependencies>
 </project>
