--- a/mneg-tlp/mneg-tlp-web/pom.xml
+++ b/mneg-tlp/mneg-tlp-web/pom.xml
@@ -13,6 +13,30 @@
   <packaging>war</packaging>
   <name>mneg-tlp-web</name>
   
+  <profiles>
+    <profile>
+      <id>testing</id>
+      <properties>     
+        <nombre.profile>testing</nombre.profile>
+        <modo.log>debug</modo.log>
+      </properties>
+    </profile>
+    <profile>
+      <id>produccion</id>
+      <properties>      
+        <nombre.profile>produccion</nombre.profile>
+        <modo.log>error</modo.log>
+      </properties>
+    </profile>
+    <profile>
+      <id>desarrollo</id>
+      <properties>
+        <nombre.profile>desarrollo</nombre.profile>
+        <modo.log>debug</modo.log>
+      </properties>      
+    </profile>       
+  </profiles>
+    
   <dependencies>
 	<dependency>
 		<groupId>com.mx.mneg.tlp</groupId>
@@ -68,6 +92,13 @@
   </dependencies>
   
   <build>
+  	<resources>
+	    <resource>
+	        <filtering>true</filtering>
+	        <directory>src/main/resources</directory>
+	        <targetPath>.</targetPath>
+	    </resource>   	
+  	</resources>  
     <finalName>mneg-tlp-web</finalName>
         <plugins>
             <plugin>
@@ -90,8 +121,18 @@
                 <version>2.1.1</version>
                 <configuration>
                     <warName>mneg-tlp-web</warName>
+                    <webResources>                    
+	                    <resource>
+	                        <filtering>true</filtering>
+	                        <directory>src/main/webapp/WEB-INF</directory>
+	                        <targetPath>WEB-INF</targetPath>
+	                        <includes>
+	                            <include>**/*.xml</include>
+	                        </includes>
+	                    </resource>
+                    </webResources>                    
                 </configuration>
-            </plugin>                       
+            </plugin>
         </plugins>    
   </build>
 </project>
