--- a/mneg-infra/mneg-infra-utils/pom.xml
+++ b/mneg-infra/mneg-infra-utils/pom.xml
@@ -11,6 +11,31 @@
   <artifactId>mneg-infra-utils</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>mneg-infra-utils</name>
+  
+  <profiles>
+    <profile>
+      <id>testing</id>
+      <properties>     
+        <nombre.profile>testing</nombre.profile>
+        <modo.log>debug</modo.log>
+      </properties>
+    </profile>
+    <profile>
+      <id>produccion</id>
+      <properties>      
+        <nombre.profile>produccion</nombre.profile>
+        <modo.log>error</modo.log>
+      </properties>
+    </profile>
+    <profile>
+      <id>desarrollo</id>
+      <properties>
+        <nombre.profile>desarrollo</nombre.profile>
+        <modo.log>debug</modo.log>
+      </properties>      
+    </profile>       
+  </profiles>
+    
   <dependencies>
   	<dependency>
 		<groupId>com.mx.mneg.infra</groupId>
@@ -45,4 +70,14 @@
 	    <scope>provided</scope>
 	</dependency>	
   </dependencies>
+  
+  <build>
+   	<resources>
+	    <resource>
+	        <filtering>true</filtering>
+	        <directory>src/main/resources</directory>
+	        <targetPath>.</targetPath>
+	    </resource>   	
+  	</resources>
+  </build>  
 </project>
