--- a/mneg-tlp/mneg-tlp-datos/pom.xml
+++ b/mneg-tlp/mneg-tlp-datos/pom.xml
@@ -12,6 +12,30 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>mneg-tlp-datos</name>
   
+  <profiles>
+    <profile>
+      <id>testing</id>
+      <properties>     
+        <nombre.profile>testing</nombre.profile>
+        <modo.log>debug</modo.log>
+      </properties>
+    </profile>
+    <profile>
+      <id>produccion</id>
+      <properties>      
+        <nombre.profile>produccion</nombre.profile>
+        <modo.log>error</modo.log>
+      </properties>
+    </profile>
+    <profile>
+      <id>desarrollo</id>
+      <properties>
+        <nombre.profile>desarrollo</nombre.profile>
+        <modo.log>debug</modo.log>
+      </properties>      
+    </profile>       
+  </profiles>  
+  
   <dependencies>
   	<dependency>
 		<groupId>com.mx.mneg.tlp</groupId>
@@ -24,10 +48,10 @@
 		<version>1.4</version>
 	</dependency>  
 	<dependency>
-		<groupId>postgresql</groupId>
-		<artifactId>postgresql</artifactId>
-		<version>8.4-702.jdbc4</version>
-	</dependency>	
+		<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
+		<version>5.1.21</version>
+	</dependency>
 	<dependency>
 	    <groupId>org.springframework</groupId>
 	    <artifactId>org.springframework.context</artifactId>
@@ -81,4 +105,14 @@
 		</exclusions>
 	</dependency>	
   </dependencies>
+  
+  <build>
+   	<resources>
+	    <resource>
+	        <filtering>true</filtering>
+	        <directory>src/main/resources</directory>
+	        <targetPath>.</targetPath>
+	    </resource>   	
+  	</resources>
+  </build>   
 </project>
