--- a/mneg-tlp/mneg-tlp-servicios/pom.xml
+++ b/mneg-tlp/mneg-tlp-servicios/pom.xml
@@ -12,6 +12,30 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>mneg-tlp-servicios</name>
   
+  <profiles>
+    <profile>
+      <id>testing</id>
+      <properties>     
+        <nombre.profile>testing</nombre.profile>
+        <modo.log>debug</modo.log>
+      </properties>
+    </profile>
+    <profile>
+      <id>produccion</id>
+      <properties>      
+        <nombre.profile>produccion</nombre.profile>
+        <modo.log>error</modo.log>
+      </properties>
+    </profile>
+    <profile>
+      <id>desarrollo</id>
+      <properties>
+        <nombre.profile>desarrollo</nombre.profile>
+        <modo.log>debug</modo.log>
+      </properties>      
+    </profile>       
+  </profiles>  
+    
   <dependencies>
 	<dependency>
 		<groupId>com.mx.mneg.infra</groupId>
@@ -39,4 +63,13 @@
 	    <artifactId>org.springframework.expression</artifactId>
 	</dependency> 		
   </dependencies>
+  <build>
+   	<resources>
+	    <resource>
+	        <filtering>true</filtering>
+	        <directory>src/main/resources</directory>
+	        <targetPath>.</targetPath>
+	    </resource>   	
+  	</resources>
+  </build>     
 </project>
