--- a/mneg-tlp/mneg-tlp-web/pom.xml
+++ b/mneg-tlp/mneg-tlp-web/pom.xml
@@ -19,6 +19,7 @@
       <properties>     
         <nombre.profile>testing</nombre.profile>
         <modo.log>debug</modo.log>
+        <dir.log>/tmp</dir.log>
       </properties>
     </profile>
     <profile>
@@ -26,6 +27,7 @@
       <properties>      
         <nombre.profile>produccion</nombre.profile>
         <modo.log>error</modo.log>
+        <dir.log>/tmp</dir.log>
       </properties>
     </profile>
     <profile>
@@ -33,6 +35,7 @@
       <properties>
         <nombre.profile>desarrollo</nombre.profile>
         <modo.log>debug</modo.log>
+        <dir.log>/tmp</dir.log>
       </properties>      
     </profile>       
   </profiles>
