- Configuraciones de ejemplo para perfil de producción.

--- a/mneg-tlp/mneg-tlp-web/pom.xml
+++ b/mneg-tlp/mneg-tlp-web/pom.xml
@@ -27,7 +27,7 @@
       <properties>      
         <nombre.profile>produccion</nombre.profile>
         <modo.log>error</modo.log>
-        <dir.log>/tmp</dir.log>
+        <dir.log>/logapp</dir.log>
       </properties>
     </profile>
     <profile>
