--- a/mneg-tlp/mneg-tlp-servicios/pom.xml
+++ b/mneg-tlp/mneg-tlp-servicios/pom.xml
@@ -62,6 +62,16 @@
 	    <groupId>org.springframework</groupId>
 	    <artifactId>org.springframework.expression</artifactId>
 	</dependency> 		
+    <dependency>
+        <groupId>javax.xml</groupId>
+        <artifactId>jaxb-impl</artifactId>
+        <version>2.1</version>
+    </dependency>   
+    <dependency>
+        <groupId>javax</groupId>
+        <artifactId>javaee-endorsed-api</artifactId>
+        <version>6.0</version>
+    </dependency>    
   </dependencies>
   <build>
    	<resources>
@@ -71,5 +81,32 @@
 	        <targetPath>.</targetPath>
 	    </resource>   	
   	</resources>
+  	<plugins>
+	    <plugin>
+	        <groupId>org.jvnet.jaxb2.maven2</groupId>
+	        <artifactId>maven-jaxb2-plugin</artifactId>
+	        <version>0.8.2</version>
+	        <executions>
+	            <execution>
+	                <goals>
+	                    <goal>generate</goal>
+	                </goals>
+	                <configuration>
+	                	<generateDirectory>src/main/java</generateDirectory>
+	                    <schemaIncludes>
+	                        <schemaInclude>**/*.xsd</schemaInclude>
+	                    </schemaIncludes>
+	                    <bindingIncludes>
+	                        <bindingInclude>**/*.xjb</bindingInclude>
+	                    </bindingIncludes>
+	                    <verbose>false</verbose>
+	                    <forceRegenerate>false</forceRegenerate>
+	                    <extension>false</extension>
+	                    <strict>true</strict>	                    
+	                </configuration>
+	            </execution>
+	        </executions>
+	    </plugin>  	
+  	</plugins>
   </build>     
 </project>
